[package]
name = "dotrust"
version = "0.2.3"
authors = ["gsfraley <gsfraley@gmail.com>"]

description = "Bindings and libraries for interacting with .NET from Rust"
license = "MIT"

repository = "https://github.com/gsfraley/dotrust"
documentation = "https://docs.rs/dotrust"


[dependencies]
libloading = "0.4.1"